# datafun

./: .gitignore  .gitmodules  Makefile  MiniToneInference.hs  README.md  RESEARCH_IDEAS.md  TODO  acmart.cls  ast.rkt  compile.rkt  deriv.org  elab.rkt  example.tex  fantasy.sty  fauxsc.sty  fontmetrics.py  header.sty  ideas.org  incremental-parsers.df  jamie-examples.df  loc  magic.sty  mini-datafun.rkt  mini-tone-inference.rkt  mode-inference.rkt  narrow.sty  natrec-and-monotonicity  notes-test.tex  opsem-logical-relations.org  parse.rkt  repl.rkt  rntz.cls  rntz.sty  rntzabstract.sty  rntzfont.sty  rntzfootnotes.sty  rntzgeometry.sty  rntznotes.cls  rntzref.sty  rntzsection.sty  (+14 more)
agda/: ABT.agda  ACC.agda  Action.agda  Booleans.agda  Cartesian.agda  Cast.agda  Cat.agda  Cat2.agda  CatOmega.agda  CatOmega2.agda  ChangeCat.agda  ChangeCat2.agda  ChangeCat3.agda  ChangeSem.agda  ChangeSem2.agda  ChangeSem3.agda  Changes.agda  Changes2.agda  Changes3.agda  Classical.agda  ClassicalAcc.agda  Composition.agda  Contexts.agda  Datafun-old.agda  Datafun-older.agda  Datafun-with-Trees.agda  Datafun.agda  Decidability.agda  Denotation.agda  DepChanges.agda  InstanceProblem.agda  Iso.agda  Lambdas.agda  MTLC.agda  MTLCDenotes.agda  MTLCSem.agda  Makefile  Markov.agda  Model.agda  Modes.agda  (+33 more)
deriv/: _tags  ast.ml  context.ml  context.mli  lexer.mll  parser.mly  typecheck.ml  util.ml  util.mli
dpa2019/: Makefile  slides.tex
hooks/: install  pre-commit
icfp16/: Makefile  datafun.sty  datafun.tex  examples.tex  expansions.tex  operational-semantics.tex  related-future-work.tex  sigplanconf.cls  typing-rules.tex
src/: loc  (+33 more)
v4-fastfix/: .gitignore  Backend.ml  Benchmark.hs  Compile.ml  Compiler.hs  Compiler.ml  Cx.ml  Lang.ml  Langs.ml  Lexer.mll  Makefile  Option.ml  Parser.mly  Passes.ml  Pretty.ml  Pretty.mli  Repl.ml  Run.ml  Runtime.hs  RuntimeOriginal.hs  StringBuilder.ml  StringBuilder.mli  Sym.ml  Sym.mli  Tagged.ml  TaggedSpined.ml  Tagless.ml  Tests.ml  ToHaskell.ml  ToHaskell.mli  Tokens.mly  Type.ml  Types.ml  Util.ml  benchmark-astar.hs  benchmark-astar2.hs  benchmark-regex.hs  benchmark-trans-loop.hs  benchmark-trans.hs  benchmark.hs  (+16 more)
v4-fastfix/old/: Normalise.hs  Tagless.ml  normalise.ml  simple.rkt  util.rkt
v4-fastfix/test/: aplus-trans.df  aplus.df  astar.df  astar2.df  astarstar.df  plus.df  rchar  rchar.df  rplus  rplus.df  sym.df  trans  trans.df
v4-fastfix/tests/: rplus
(+386 files in other folders)
