(library
 (name datafun)
 (libraries unix)
 (modules Compiler Cx Lang Lexer Option Parser Passes Pretty Repl
          StringBuilder Sym Tests ToHaskell Tokens Type Util))

(executable
 (name run)
 (libraries datafun)
 (modules Run))

(executable (name seminaive) (modules seminaive) (libraries datafun))
(executable (name seminaive_raw) (modules seminaive_raw) (libraries datafun))
(executable (name seminaive_simple) (modules seminaive_simple) (libraries datafun))
(executable (name naive) (modules naive) (libraries datafun))

;; We separate out the tokens into their own module so that the lexer can depend
;; on them directly instead of on the whole parser. This lets us parameterize
;; the parser over the backend without also needing to parameterize the lexer.
(menhir
 (modules Tokens)
 (flags --only-tokens))

(menhir
 (merge_into Parser)
 (modules Tokens Parser)
 (flags --explain --external-tokens Tokens))

(ocamllex Lexer)
